--- a/style.css
+++ b/style.css
@@ -4,46 +4,38 @@ body {
     color: #000;
     text-align: left;
     width: 960px;
-    margin: 20px auto;
+    margin: 20px;
 }
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Hiragino Kaku Gothic Pro", Meiryo, sans-serif;
-    font-weight: lighter;
-}
-a:link, a:visited {
-    color: blue;
-    text-decoration: none;
-}
-a:hover {
-    color: #0cc;
-}
-header, nav, section, footer {
-    display: block;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    -webkit-box-shadow: 0px 0px 4px #666;
-    -moz-box-shadow: 0px 0px 4px #666;
-    box-shadow: 0px 0px 4px #666;
-    border: 1px solid #d3d3d3;
-    background-color: #fff;
-    margin: 5px;
-    padding: 0 20px 10px 20px;
+header, section, footer {
+    margin: 5px 0px 5px 0px;
     font-seze: 12pt;
     color: #000;
     text-align: left;
 }
-header {
-    text-align: center;
-    padding: 30px;
-    background-image: -moz-linear-gradient(top, #888, #333);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.0, #888), color-stop(1.0, #333));
-    background-color: #1318a9;
-    color: #fff;
-    text-shadow: 0px 0px 4px #000000;
+section {
+    float: right;
+    width: 960px;
+    text-align: left;
+/*    margin-bottom: 10px;*/
 }
-header h1, header h2, header h3, header h4, header h5, header h6, header li, header p {
-    font-family: Georgia, 'Hiragino Mincho Pro', Meiryo, serif;
+footer {
+    clear: both !important;
+    background-color: white;
+    border: none;
+    color: #fff;
+    font-size: 0.8em;
+    text-align: left;
+}
+article {
+/*    margin: 0 0 30px 0;*/
+}
+h1, h2, h3 {
+    font-family: "Hiragino Kaku Gothic Pro", Meiryo, sans-serif;
+    font-weight: lighter;
+}
+h3 {
+    margin: 20px 0px -10px 0px;
+    font-size: 1.3em;
 }
 header h1 {
     font-size: 2.3em;
@@ -51,53 +43,15 @@ header h1 {
     letter-spacing: 0em;
 }
 header h2 {
-    margin: -10px 0px 20px;
+/*    margin: -10px 0px 20px;*/
     font-size: 1.3em;
 }
-header ul {
-    padding: 0px;
-    list-style-type: none;
-    display: inline;
+a:link, a:visited {
+    color: blue;
+    text-decoration: none;
 }
-header li {
-    margin: 0px 10px;
-    padding: 0px;
-    list-style-type: none;
-    display: inline;
-}
-nav { 
-    float: right;
-    width: 200px;
-}
-nav h1 {
-    font-size: 1.4em;
-}
-section {
-    float: right;
-    width: 656px;
-    text-align: left;
-    margin-bottom: 10px;
-}
-section h1, nav h1 {
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    background-color: #444;
-    color: #fff;
-    padding: 10px;
-    margin: 10px -10px;
-    text-shadow: 1px 1px 5px #000;
-}
-section ul {
-    padding: 0px;
-    list-style: none;
-    <!-- border-top: 1px solid #e7e2d7; -->
-    margin: 14px 0px;
-}
-section li {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
+a:hover {
+    color: #0cc;
 }
 section li a:link, section li a:visited {
     float: left;
@@ -110,23 +64,4 @@ section li a:hover {
 }
 section p {
     font-size: 0.9em;
-}
-article {
-    margin: 0 0 30px 0;
-}
-footer {
-    clear: both !important;
-    padding: 10px;
-    background-color: white;
-    border: none;
-    color: #fff;
-    font-size: 0.8em;
-    text-align: center;
-}
-footer a {
-    margin: 0px 5px;
-}
-img {
-    border: none;
-    vertical-align: middle
 }
